cluster/media/nginx-fileshare/nginx-fileshare.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-fileshare
spec:
  type: NodePort
  selector:
    app: nginx-fileshare
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-fileshare
spec:
  selector:
    matchLabels:
      app: nginx-fileshare
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-fileshare
    spec:
      containers:
        - name: nginx-fileshare
          image: nginx:1.15
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: nginx-fileshare-pv-storage
      volumes:
        - name: nginx-fileshare-pv-storage
          persistentVolumeClaim:
            claimName: nginx-fileshare-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-fileshare-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-force-host: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: dl.sldk.de
      http:
        paths:
          - backend:
              serviceName: nginx-fileshare
              servicePort: 80
